fix contact form responsive on mobile

--- a/f8/w3_band/assets/css/style.css
+++ b/f8/w3_band/assets/css/style.css
@@ -31,6 +31,10 @@ html {
   margin-top: 16px !important;
 }
 
+.mt-32 {
+  margin-top: 32px !important;
+}
+
 .pull-right {
   float: right !important;
 }
